--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
 
+# Exclude all Unity scene files except the ones you want to include
+!*.unity
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
